# tradedb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  pyproject.toml
.github/actions/install_uv/: action.yaml
.github/workflows/: repo_quality.yaml
src/tradedb/: __init__.py
src/tradedb/_dev/: util.py
src/tradedb/histdb/: __init__.py  histdb.py
src/tradedb/histdb/sql/: model.py  sqlitehistdb.py
tests/: test_tradedb.py
