[project]
name = "tradedb"
version = "0.1.0.dev1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fburleson", email = "joelburleson0104@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.4.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
