[project]
name = "tradedb"
version = "0.1.4"
description = "A Python library for storing market data 🐍💾"
readme = "README.md"
authors = [
    { name = "fburleson", email = "joelburleson0104@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "peewee>=4.0.5",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.4.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
